deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: px-docs-spike
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - pxdocs.wk1.co
    - 1.3.pxdocs.wk1.co
    - 1.4.pxdocs.wk1.co
    secretName: ingress-pxdocs-versioned-lego
  rules:
  - host: pxdocs.wk1.co
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-1-4
          servicePort: 80
  - host: 1.3.pxdocs.wk1.co
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-1-3
          servicePort: 80
  - host: 1.4.pxdocs.wk1.co
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-1-4
          servicePort: 80
